# rdfox_runner

./: .gitignore  .readthedocs.yaml  DEVELOPING.rst  README.rst  noxfile.py  pyproject.toml  pyrightconfig.json
.github/workflows/: python-tests.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  installation.rst  using_basic.rst  using_endpoint.rst
src/rdfox_runner/: __init__.py  command_runner.py  rdfox_endpoint.py  run_in_dir.py  run_rdfox.py
tests/: conftest.py  test_command_runner.py  test_rdfox_api.py  test_rdfox_output_files.py  test_rdfox_version.py  test_run_in_dir.py  test_run_rdfox.py  w3c_example.ttl
