[tool.poetry]
name = "rdfox_runner"
version = "0.1.6"
description = ""
authors = ["Rick Lupton <mail@ricklupton.name>"]

[tool.poetry.dependencies]
python = "^3.7"
rdflib = "^5.0.0"
importlib-metadata = {version = "^1.0", python = "<3.8"}
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^3.5.2"
sphinx-rtd-theme = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
